--- a/index.html
+++ b/index.html
@@ -10,8 +10,31 @@
 <body>
     <div class="calculator">
         <div class="display"></div>
-        <div class="large-buttons"></div>
-        <div class="small-buttons"></div>
+        <div class="large-buttons">
+            <button class="clear">CLEAR</button>
+            <button class="equals">=</button>
+        </div>
+        <div class="small-buttons">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">/</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator">*</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator">-</button>
+            <button class="number">&#177;</button>
+            <button class="number">0</button>
+            <button class="number">.</button>
+            <button class="operator">+</button>
+        </div>
     </div>
+
+
+    <script src="index.js"></script>
 </body>
 </html>
