Added functionality of the calculator

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="calculator">
-        <div class="display"></div>
+        <div class="display">
+            <p class="readout"></p>
+        </div>
         <div class="large-buttons">
             <button class="clear">CLEAR</button>
             <button class="equals">=</button>
@@ -27,9 +31,9 @@
             <button class="number">2</button>
             <button class="number">3</button>
             <button class="operator">-</button>
-            <button class="number">&#177;</button>
+            <button class="modifier">&#177;</button>
             <button class="number">0</button>
-            <button class="number">.</button>
+            <button class="modifier">.</button>
             <button class="operator">+</button>
         </div>
     </div>
